<resources>
    <string name="app_name">PMG</string>

    <!--1.0 INICIAR-SESION -->
    <string name="pmg1_0_titulo">INICIAR SESION</string>
    <string name="pmg1_0_usuario">Usuario</string>
    <string name="pmg1_0_contrasenia">Contraseña</string>
    <string name="pmg1_0_iniciarSesion">Iniciar Sesión</string>
    <string name="pmg1_0_informacion"></string>

    <!--1.1 MENU-PRINCIPAL -->
    <string name="pmg1_1_titulo">MENÚ PRINCIPAL</string>
    <string name="pmg1_1_movimientos">Movimientos</string>
    <string name="pmg1_1_conceptos">Conceptos</string>
    <string name="pmg1_1_EstadoFinanPers">Estado de Finanzas Personales</string>
    <string name="pmg1_1_periodoActivo">Seleccionar Periodo Activo</string>
    <string name="pmg1_1_informacion"></string>

    <!--1.0.1 REGISTRO -->
    <string name="pmg1_0_1_titulo">Para usar PMG debes registrarte</string>
    <string name="pmg1_0_1_usuario">Usuario</string>
    <string name="pmg1_0_1_contrasenia">Contraseña</string>
    <string name="pmg1_0_1_nombre">Nombre</string>
    <string name="pmg1_0_1_apellido">Apellido</string>
    <string name="pmg1_0_1_registrarse">Registrarse</string>
    <string name="pmg1_0_1_informacion"></string>

    <!--1.1.1 MENU-MOVIMIENTOS -->
    <string name="pmg1_1_1_titulo">MOVIMIENTOS</string>
    <string name="pmg1_1_1_ingresar">Ingresar</string>
    <string name="pmg1_1_1_modificar">Modificar</string>
    <string name="pmg1_1_1_eliminar">Elminar</string>
    <string name="pmg1_1_1_consultar">Consultar</string>
    <string name="pmg1_1_1_periodoAct">Periodo Activo:</string>
    <string name="pmg1_1_1_informacion">Información: </string>

    <!--1.1.1.1 INGRESAR-MOV -->
    <string name="pmg1_1_1_1titulo">INGRESAR MOVIMIENTO</string>
    <string name="pmg1_1_1_1tipo">Tipo</string>
    <string name="pmg1_1_1_1concepto">Concepto</string>
    <string name="pmg1_1_1_1formaPago">Forma de Pago</string>
    <string name="pmg1_1_1_1debito">Débito</string>
    <string name="pmg1_1_1_1credito">Crédito</string>
    <string name="pmg1_1_1_1descripcion">Descripción</string>
    <string name="pmg1_1_1_1valor">Valor $0.0</string>
    <string name="pmg1_1_1_1ingresarMov">Ingresar Movimiento</string>
    <string name="pmg1_1_1_1informacion">Información</string>

    <!--1.1.1.2 MODIFICAR-MOV -->
    <string name="pmg1_1_1_2titulo">MODIFICAR MOVIMIENTO</string>
    <string name="pmg1_1_1_2tipo">Tipo</string>
    <string name="pmg1_1_1_2concepto">Concepto</string>
    <string name="pmg1_1_1_2movimiento">Movimiento</string>
    <string name="pmg1_1_1_2debito">Débito</string>
    <string name="pmg1_1_1_2credito">Crédito</string>
    <string name="pmg1_1_1_2descripcion">Descripción</string>
    <string name="pmg1_1_1_2valor">Valor</string>
    <string name="pmg1_1_1_2formaPago">Forma de Pago</string>
    <string name="pmg1_1_1_2fecha">Fecha</string>
    <string name="pmg1_1_1_2hora">Hora</string>
    <string name="pmg1_1_1_2modifMovimiento">Modificar Movimiento</string>
    <string name="pmg1_1_1_2informacion">Información</string>


    <!--1.1.1.3 ELIMINAR-MOV -->
    <string name="pmg1_1_1_3titulo">ELIMINAR MOVIMIENTO</string>
    <string name="pmg1_1_1_3tipo">Tipo</string>
    <string name="pmg1_1_1_3concepto">Concepto</string>
    <string name="pmg1_1_1_3movimiento">Movimiento</string>
    <string name="pmg1_1_1_3eliminarMovimiento">Eliminar Movimiento</string>
    <string name="pmg1_1_1_3informacion">Información</string>

    <!--1.1.1.4 CONSULTAR-MOV -->
    <string name="pmg1_1_1_4titulo">CONSULTAR MOVIMIENTO</string>
    <string name="pmg1_1_1_4tipo">Tipo</string>
    <string name="pmg1_1_1_4concepto">Concepto</string>
    <string name="pmg1_1_1_4movimiento">Movimiento</string>
    <string name="pmg1_1_1_4tipoOperacion">Tipo de Operación</string>
    <string name="pmg1_1_1_4descripcion">Descripción</string>
    <string name="pmg1_1_1_4valor">Valor</string>
    <string name="pmg1_1_1_4medioPago">Medio de Pago</string>
    <string name="pmg1_1_1_4fecha">Fecha</string>
    <string name="pmg1_1_1_4hora">Hora</string>
    <string name="pmg1_1_1_4informacion">Información</string>

    <!--1.1.1 MENU-CONCEPTOS -->
    <string name="pmg1_1_2_titulo">CONCEPTOS</string>
    <string name="pmg1_1_2_ingresar">Ingresar</string>
    <string name="pmg1_1_2_modificar">Modificar</string>
    <string name="pmg1_1_2_eliminar">Elminar</string>
    <string name="pmg1_1_2_consultar">Consultar</string>
    <string name="pmg1_1_2_periodoAct">Periodo Activo:</string>
    <string name="pmg1_1_2_informacion">Información</string>

    <!--1.1.2.1 INGRESAR-CONCEPTO -->
    <string name="pmg1_1_2_1titulo">INGRESAR CONCEPTO</string>
    <string name="pmg1_1_2_1tipo">Tipo</string>
    <string name="pmg1_1_2_1descripcion">Descripción</string>
    <string name="pmg1_1_2_1disponibleMes">Disponible para el mes</string>
    <string name="pmg1_1_2_1ingresarConcepto">Ingresar Concepto</string>
    <string name="pmg1_1_2_1informacion">Información</string>

    <!--1.1.2.2 MODIFICAR-CONCEPTO -->
    <string name="pmg1_1_2_2titulo">MODIFICAR CONCEPTO</string>
    <string name="pmg1_1_2_2tipo">Tipo</string>
    <string name="pmg1_1_2_2concepto">Concepto</string>
    <string name="pmg1_1_2_2nuevaDescripcion">Nueva Descripción</string>
    <string name="pmg1_1_2_2nuevoDisponibleMes">Nuevo Disponible para el mes</string>
    <string name="pmg1_1_2_2modificarConcepto">Modificar Concepto</string>
    <string name="pmg1_1_2_2informacion">Información</string>

    <!--1.1.2.3 ELIMINAR-CONCEPTO -->
    <string name="pmg1_1_2_3titulo">ELIMINAR CONCEPTO</string>
    <string name="pmg1_1_2_3tipo">Tipo</string>
    <string name="pmg1_1_2_3concepto">Concepto</string>
    <string name="pmg1_1_2_3eliminarConcepto">Eliminar Concepto</string>
    <string name="pmg1_1_2_3informacion">Información</string>

    <!--1.1.2.4 CONSULTAR-CONCEPTOS -->
    <string name="pmg1_1_2_4titulo">CONSULTAR CONCEPTOS</string>
    <string name="pmg1_1_2_4tipo">Tipo</string>
    <string name="pmg1_1_2_4informacion">Información</string>

    <!--1.1.3.CM ACTUALIZAR-CM -->
    <string name="pmg1_1_3_CMactualizarCajaMenor">ACTUALIZAR CAJA MENOR Y SALDO EN BANCO</string>
    <string name="pmg1_1_3_CMvalorCajaMenor">Valor Caja Menor</string>
    <string name="pmg1_1_3_CMvalorSaldoBanco">Valor Saldo Banco</string>
    <string name="pmg1_1_3_CMactualizar">Actualizar</string>
    <string name="pmg1_1_3_CMomitir">Omitir</string>
    <string name="pmg1_1_3_CMperiodoActivo">Periodo Activo</string>
    <string name="pmg1_1_3_CMinformacion">Información</string>

    <!--1.1.4 SELECCIONAR-PERIODO-ACT -->
    <string name="pmg1_1_4titulo">SELECCIONAR PERIODO ACTIVO</string>
    <string name="pmg1_1_4anio">Año</string>
    <string name="pmg1_1_4mes">Mes</string>
    <string name="pmg1_1_4selPeriodoAct">Seleccionar Periodo Activo</string>
    <string name="pmg1_1_4informacion">Información</string>

</resources>
