<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.castano.erwin.pmg.Activity_1_1_1">


    <TextView
        android:id="@+id/textViewpmg1_1_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_1_periodoAct"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewpmg1_1_1_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_1_titulo"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <Button
        android:id="@+id/buttonpmg1_1_1_ingresar"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:onClick="ingresarMovimiento"
        android:text="@string/pmg1_1_1_ingresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewpmg1_1_1_titulo"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/buttonpmg1_1_1_modificar"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_1_modificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonpmg1_1_1_ingresar"
        app:layout_constraintVertical_bias="0.012" />

    <Button
        android:id="@+id/buttonpmg1_1_1_eliminar"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_1_eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonpmg1_1_1_modificar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonpmg1_1_1_consultar"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_1_consultar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonpmg1_1_1_eliminar"
        app:layout_constraintVertical_bias="0.009" />

    <TextView
        android:id="@+id/textViewpmg1_1_1_informacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_1_informacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonpmg1_1_1_consultar" />
</android.support.constraint.ConstraintLayout>
