<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.castano.erwin.pmg.Activity_1_1_3_CM">

    <TextView
        android:id="@+id/textViewpmg1_1_3_CMactualizarCajaMenor"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_3_CMactualizarCajaMenor"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <EditText
        android:id="@+id/editTextpmg1_1_3_CMvalorCajaMenor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/pmg1_1_3_CMvalorCajaMenor"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewpmg1_1_3_CMactualizarCajaMenor"
        app:layout_constraintVertical_bias="0.108" />

    <EditText
        android:id="@+id/editTextpmg1_1_3_CMvalorSaldoBanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/pmg1_1_3_CMvalorSaldoBanco"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextpmg1_1_3_CMvalorCajaMenor"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/buttonpmg1_1_3_CMactualizar"
        android:layout_width="306dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_3_CMactualizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextpmg1_1_3_CMvalorSaldoBanco"
        app:layout_constraintVertical_bias="0.073" />

    <Button
        android:id="@+id/buttonpmg1_1_3_CMomitir"
        android:layout_width="306dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_3_CMomitir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonpmg1_1_3_CMactualizar"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/textViewpmg1_1_3_CMinformacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_3_CMinformacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonpmg1_1_3_CMomitir" />

    <TextView
        android:id="@+id/textViewpmg1_1_3_CMperiodoActivo"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="276dp"
        android:layout_marginTop="16dp"
        android:text="@string/pmg1_1_3_CMperiodoActivo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
