<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.castano.erwin.pmg.Activity_1_1_1_4"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textViewpmg1_1_1_4titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/pmg1_1_1_4titulo"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <Spinner
        android:id="@+id/spinnerSelecTipopmg1_1_1_4tipo"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewpmg1_1_1_4titulo"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerSelecConceptopmg1_1_1_4concepto"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSelecTipopmg1_1_1_4tipo"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerSelecFormPagopmg1_1_1_4movimiento"
        android:layout_width="368dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSelecConceptopmg1_1_1_4concepto"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewpmg1_1_1_4tipoOperacion"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_1_4tipoOperacion"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewpmg1_1_1_4informacion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSelecFormPagopmg1_1_1_4movimiento"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/textViewpmg1_1_1_4descripcion"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_1_4descripcion"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewpmg1_1_1_4tipoOperacion"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewpmg1_1_1_4valor"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_1_4valor"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewpmg1_1_1_4descripcion"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewpmg1_1_1_4medioPago"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_1_4medioPago"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewpmg1_1_1_4valor"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewpmg1_1_1_4fecha"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_1_4fecha"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewpmg1_1_1_4medioPago"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewpmg1_1_1_4hora"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_1_4hora"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewpmg1_1_1_4fecha"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewpmg1_1_1_4informacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pmg1_1_1_4informacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewpmg1_1_1_4hora" />


</android.support.constraint.ConstraintLayout>
